# ASRD

./: .gitignore  Makefile  Procfile  README.md  data_preparation.py  design.py  form.py  form.ui  main.py  pyproject.toml  requirements.txt  test.py
asrd/: __init__.py  analyzer.py  app.py  config.py  data_preparation.py  database.py  main.py  models.py  qt.py  routes.py
asrd/qt_design/: __init__.py  design.py  form.py  form.ui
asrd/templates/: index.html
migrations/versions/: 4f4d4a9442f2_.py
notebooks/: asrd.ipynb
